ref : fully remove pin
